--- a/rbk.ipynb
+++ b/rbk.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Approximate angle for the $k$-th order rainbow\n",
+    "Approximate angle for the $k$-th order rainbow is\n",
     "\n",
     "$\\delta_k = (k+1)\\pi+2\\alpha_k-2(k+1)\\beta_k$\n",
     "\n",
@@ -44,29 +44,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 59.39 40.20 42.03\n",
-      "2 71.83 45.45 50.98\n",
-      "3 76.84 46.91 -41.61\n",
-      "4 79.63 47.54 -43.86\n",
-      "5 81.43 47.87 51.58\n"
+      "Minus sign signifies counting from the Sun.\n",
+      "Otherwise, the angle is measured from the point opposite of the Sun.\n",
+      "#   Red   Violet\n",
+      "1  42.57  41.12\n",
+      "2  50.00  52.61\n",
+      "3 -42.98 -39.32\n",
+      "4 -42.11 -46.79\n",
+      "5  53.70  48.02\n",
+      "6  29.98  36.65\n",
+      "7 -66.65 -58.99\n",
+      "8 -16.51 -25.15\n",
+      "9  80.47  70.84\n"
      ]
     }
    ],
    "source": [
-    "n1 = 1\n",
-    "n2 = 1.333333\n",
-    "n = n2/n1\n",
+    "nAir = 1.00027717\n",
+    "nWaterRed = 1.33\n",
+    "nWaterViolet = 1.34\n",
+    "n1 = nWaterRed/nAir\n",
+    "n2 = nWaterViolet/nAir\n",
     "\n",
-    "for k in range(1,6):\n",
-    "    a = rbkdeg(n,k)\n",
-    "    print(k,'%0.2f'%a[0],'%0.2f'%a[1],'%0.2f'%a[2])"
+    "print('Minus sign signifies counting from the Sun.')\n",
+    "print('Otherwise, the angle is measured from the point opposite of the Sun.')\n",
+    "print('#   Red   Violet')\n",
+    "for k in range(1,10):\n",
+    "    a1 = rbkdeg(n1,k)\n",
+    "    a2 = rbkdeg(n2,k)\n",
+    "    print('%d %6.2f %6.2f' % (k,a1[2],a2[2]))"
    ]
   },
   {
